<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:src="@drawable/zombiebg" />

  
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/mainMenu"
            style="@style/ButtonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/linearLayout1"
            android:layout_centerHorizontal="true"
            android:background="@drawable/redbutton"
            android:text="@string/main_menu"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#000000" />

        <ImageButton
            android:id="@+id/playGame"
            style="@style/ButtonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/clouddark"
            android:src="@drawable/playbutton"
            android:text="@string/play_game" />

        <Button
            android:id="@+id/helpGame"
            style="@style/ButtonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/clouddark"
            android:text="@string/help_game"
            android:textColor="#000000" />

        <Button
            android:id="@+id/highScores"
            style="@style/ButtonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/clouddark"
            android:text="@string/high_scores"
            android:textColor="#000000" />
    </LinearLayout>

</RelativeLayout>